Базовая инфраструктура проекта и полная разметка интерфейса

--- a/InformationSystem/App.xaml
+++ b/InformationSystem/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:InformationSystem"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="WhistlerBlue.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
