--- a/InformationSystem/MainWindow.xaml
+++ b/InformationSystem/MainWindow.xaml
@@ -3,16 +3,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         
-        xmlns:local="clr-namespace:InformationSystem"
-        
         Title="Information System" 
         
         MinHeight="500"
         Height="500"  
         
         MinWidth="800"
-        Width="800" Loaded="Window_Loaded"
-        >
+        Width="800" 
+        
+        Loaded="Window_Loaded">
     <Window.Resources>
         <Style TargetType="{x:Type GridViewColumnHeader}">
             <Setter Property="HorizontalContentAlignment" Value="Left" />
@@ -24,9 +23,9 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*" MinWidth="50"/>
+            <ColumnDefinition Width="50*" MinWidth="200"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="150*" MinWidth="150"/>
+            <ColumnDefinition Width="150*" MinWidth="350"/>
         </Grid.ColumnDefinitions>
         <GridSplitter Grid.Row="1" 
                       Grid.Column="1" 
@@ -52,12 +51,13 @@
                 </MenuItem>
             </Menu>
         </DockPanel>
-        <TreeView Grid.Row="1" Grid.Column="0" x:Name="CompanyList"/>
+        <TreeView Grid.Row="1" Grid.Column="0" x:Name="tvGroups" TreeViewItem.Selected="tvGroups_Selected"/>
         <DataGrid x:Name="dgEmployees" 
                   Grid.Row="1" 
                   Grid.Column="2" 
                   AutoGenerateColumns="False"
-                  HeadersVisibility="Column">
+                  HeadersVisibility="Column"
+                  CanUserDeleteRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Path=ID}" IsReadOnly="True" Header="ID" Width="*"/>
                 <DataGridTextColumn Binding="{Binding Path=Name}" IsReadOnly="True" Header="Name" Width="*"/>
