--- a/InformationSystem/MainWindow.xaml
+++ b/InformationSystem/MainWindow.xaml
@@ -38,16 +38,17 @@
         <DockPanel Grid.ColumnSpan="3">
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="File">
-                    <MenuItem Header="Save"/>
-                    <MenuItem Header="Load"/>
+                    <MenuItem Header="Save" Click="MenuItem_Click_Save"/>
+                    <MenuItem Header="Load" Click="MenuItem_Click_Load"/>
                     <Separator/>
-                    <MenuItem Header="Exit"/>
+                    <MenuItem Header="Exit" Click="MenuItem_Click_Exit"/>
                 </MenuItem>
                 <MenuItem Header="Edit">
-                    <MenuItem Header="Generate new"/>
+                    <MenuItem Header="Clear data" Click="MenuItem_Click_ClearData"/>
+                    <MenuItem Header="Generate new" Click="MenuItem_Click_GenerateNew"/>
                 </MenuItem>
                 <MenuItem Header="Help">
-                    <MenuItem Header="About"/>
+                    <MenuItem Header="About" Click="MenuItem_Click_About"/>
                 </MenuItem>
             </Menu>
         </DockPanel>
